--- a/dev_apps/test-keyboard-app/style/keyboard.css
+++ b/dev_apps/test-keyboard-app/style/keyboard.css
@@ -9,10 +9,10 @@ body {
 
 #keyboard {
   width: 100%;
-  height: 20rem;
+  height: 20.5rem;
   position: absolute;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: blue;
   pointer-events: auto;
 }
 
@@ -22,4 +22,15 @@ body {
   border: 0.2rem solid gray;
   color: white;
   margin: 0.2rem;
+}
+
+.popup {
+  position: absolute;
+  top: -5.8rem;
+  width: 5.6rem;
+  height: 5.6rem;
+  color: #fff;
+  font-size: 2.8rem;
+  line-height: 5.6rem;
+  border-radius: 50%;
 }
