--- a/dev_apps/test-keyboard-app/style/keyboard.css
+++ b/dev_apps/test-keyboard-app/style/keyboard.css
@@ -12,8 +12,10 @@ body {
   height: 20.5rem;
   position: absolute;
   bottom: 0;
-  background-color: blue;
   pointer-events: auto;
+  z-index: 15;
+  border-top: 0.1rem solid #A1A5A8;
+  background-color: #606B6E;
 }
 
 .key {
@@ -33,4 +35,5 @@ body {
   font-size: 2.8rem;
   line-height: 5.6rem;
   border-radius: 50%;
+  background-color: red;
 }
